--- a/force-app/main/default/lwc/harvestFieldList/harvestFieldList.html
+++ b/force-app/main/default/lwc/harvestFieldList/harvestFieldList.html
@@ -1,6 +1,6 @@
 <template>
     <div>
-        <div class="content">
+        <div lwc:dom=”manual” class="content">
             <template if:true={treeData}>
                 <div class="list-wrapper">
                     <template if:true={isTable}>
